fix search icon placement on tablet

--- a/src/assets/toolkit/styles/6-components/_components.site-header.scss
+++ b/src/assets/toolkit/styles/6-components/_components.site-header.scss
@@ -253,6 +253,15 @@
 
     }
 
+    @include media( $tablet-and-smaller ) {
+      .menu-bar {
+        .search-item {
+          position: absolute;
+          right: 1em;
+        }
+      }
+    }
+
     @include media( $mobile-large-and-smaller ) {
 
       .block {
